KUBERNETES/backup/ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{},"name":"joke-ingress","namespace":"jokes-app"},"spec":{"ingressClassName":"nginx","rules":[{"host":"localhost","http":{"paths":[{"backend":{"service":{"name":"front-end-service","port":{"number":80}}},"path":"/","pathType":"Prefix"},{"backend":{"service":{"name":"backend-end-service","port":{"number":80}}},"path":"/joke","pathType":"Prefix"}]}}]}}
    creationTimestamp: "2025-04-27T10:30:43Z"
    generation: 2
    name: joke-ingress
    namespace: jokes-app
    resourceVersion: "16743"
    uid: 54d2f5de-d618-40ab-a058-301b5088f097
  spec:
    ingressClassName: nginx
    rules:
    - host: localhost
      http:
        paths:
        - backend:
            service:
              name: front-end-service
              port:
                number: 80
          path: /
          pathType: Prefix
        - backend:
            service:
              name: backend-end-service
              port:
                number: 80
          path: /joke
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - hostname: localhost
kind: List
metadata:
  resourceVersion: ""
